--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                     <p>Head office: zone 9, Ayekale Akande Street, Osogbo, Osun State.</p></div>
                     <div class="call"><i class="fa-solid fa-phone"></i>
                      <h3>CALL US</h3>
-                    <p>+2348130693571
+                    <p style="text-decoration: none;color: white;">+2348130693571
                         +2347011560069</p></div>
                 <div class="mail"><i class="fa-solid fa-envelope"></i>
                     <h3>EMAIL</h3>
